add intellij settings

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,17 @@
 /target
+/build
 /bin
-/.idea
+/.idea/artifacts
+/.idea/libraries
+/.idea/modules
+/.idea/compiler.xml
+/.idea/modules.xml
+/.idea/vcs.xml
+/.idea/workspace.xml
 /*.iml
+/.gradle
+/tomcat.*
 /dbflute-intro.*
 /mydbflute/intro_resources
+trial_config.ignored
+.DS_Store
