--- a/pom.xml
+++ b/pom.xml
@@ -13,10 +13,10 @@
 	<inceptionYear>2014</inceptionYear>
 
 	<properties>
-		<dbflute.version>1.2.5</dbflute.version>
+		<dbflute.version>1.2.6-B-SNAPSHOT</dbflute.version>
 		<h2.jdbc.version>2.0.206</h2.jdbc.version>
 		<spring.version>5.3.14</spring.version>
-		<utflute.version>0.9.2</utflute.version>
+		<utflute.version>0.9.4</utflute.version>
 	</properties>
 
 	<licenses>
