use reload4j instead of log4j v1

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -4,7 +4,7 @@
 # ========================================================================================
 #                                                                               Definition
 #                                                                               ==========
-log.domain.name = dockside
+log.domain.name = howto
 
 log.file.basedir=/tmp/dbflute/test
 log.file.date.pattern='.'yyyy-MM-dd
