--- a/pom.xml
+++ b/pom.xml
@@ -185,8 +185,8 @@
 		<!-- logging -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-log4j12</artifactId>
-			<version>1.7.7</version>
+			<artifactId>slf4j-reload4j</artifactId>
+			<version>1.7.36</version>
 			<scope>runtime</scope>
 		</dependency>
 
